k8s/mychart/templates/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webapp-deployment
  labels:
    app: my-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-webapp
  template:
    metadata:
      labels:
        app: my-webapp
    spec:
      containers:
      - name: webserver
        image: nginx:latest
        ports:
        - containerPort: 80


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: htaccess-volume
          mountPath: /usr/local/apache2/htdocs/.htaccess
          subPath: .htaccess
      volumes:
      - name: htaccess-volume
        configMap:
          name: apache-htaccess
